style form, question tile and add favicon/fonts

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,9 @@
     <title>AnswerBoard</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="http://icons.iconarchive.com/icons/iconarchive/red-orb-alphabet/256/Question-mark-icon.png" type="image/gif" sizes="16x16"/>
+    <link href='https://fonts.googleapis.com/css?family=Hind+Siliguri:400,700' rel='stylesheet' type='text/css'>
+
 
     {{content-for "head"}}
 
